#This is an initial CMake configuration file for FluoRender
include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem)
include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Biff)
include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Nrrd)
include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Air)
include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Hest)
add_library(TeemNrrd	accessors.c 
			apply1D.c
			apply2D.c
			arith.c
			arraysNrrd.c 
			axis.c
			cc.c
			ccmethods.c
			comment.c
			convertNrrd.c
			defaultsNrrd.c
			encoding.c
			encodingAscii.c
			encodingBzip2.c
			encodingGzip.c
			encodingHex.c
			encodingRaw.c
			endianNrrd.c
			enumsNrrd.c
			filt.c
			format.c
			formatEPS.c
			formatNRRD.c
			formatPNG.c
			formatPNM.c
			formatText.c
			formatVTK.c
			gzio.c
			hestNrrd.c
			histogram.c
			iter.c
			kernel.c
			keyvalue.c
			map.c
			measure.c
			methodsNrrd.c
			parseNrrd.c
			range.c
			read.c
			reorder.c
			resampleContext.c
			resampleNrrd.c
			simple.c
			subset.c
			superset.c
			tmfKernel.c
			winKernel.c
			write.c)
